print some message

--- a/.github/workflows/lab00-hello-github-actions.yml
+++ b/.github/workflows/lab00-hello-github-actions.yml
@@ -9,3 +9,6 @@ jobs:
     steps:
       - name: Run hello world
         run: echo "🎉 Step of the job is running on ${{ runner.os }}!"
+      
+      - name: Run some text
+        run: echo "Try to print text with GitHub actions!"
