--- a/.github/workflows/lab01-variables-and-secrets.yml
+++ b/.github/workflows/lab01-variables-and-secrets.yml
@@ -1,6 +1,10 @@
 name: Lab01 Variables and Secrets
 run-name: Lab01 - ${{ github.actor }} is testing variables and secrets 🚀
 permissions: read-all
+
+env:
+  MY_VARIABLE: Hello, GitHub Actions!
+
 on:
   workflow_dispatch:
 jobs:
@@ -9,3 +13,9 @@ jobs:
     steps:
       - name: Run hello world
         run: echo "🎉 Step of the job is running on ${{ runner.os }}!"
+      - name: Hello world action
+        with: # Set the secret as an input
+          first: ${{ secrets.DEMO_SECRET }}
+        env: # Or as an environment variable
+          second: ${{ secrets.DEMO_SECRET }}
+        run: echo "${{first}} and ${{second}}"
